<resources>
    <string name="app_name">Pixel Brawl</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="phone_text">Phone:</string>
    <string name="email_text">E-mail:</string>
    <string name="search_hint">Search...</string>
    <string name="delete">×</string>
    <string name="pingpong">핑퐁\n게임</string>
    <string name="facebook_app_id">295217014462902</string>
    <string name="fb_login_protocol_scheme">fb295217014462902</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="app_description">Synchronize your contact and gallery.</string>
    <string name="new_game">CREATE GAME</string>
    <string name="enter_game">ENTER GAME</string>
    <string name="type_game_num">Type number</string>
    <string name="refresh_server">Refresh server connection</string>


</resources>
